--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -470,7 +472,8 @@
     <string name="option_author_works_book">Μόνο βιβλία</string>
     <string name="option_author_works_toc">Μόνο τίτλοι περιεχομένου</string>
     <string name="title_backup_and_export">Δημιουργία αντιγράφων ασφαλείας και εξαγωγή</string>
-    <string name="btn_this_node_only">Μόνο αυτός ο κόμβος</string>
+    <string name="option_apply_to_this_node_only">Μόνο αυτός ο κόμβος</string>
+    <string name="option_apply_to_all_related_books">Όλα τα σχετικά βιβλία</string>
     <string name="option_barcode_scan">Σάρωση γραμμωτού κώδικα</string>
     <string name="option_barcode_scan_continuous">Σάρωση συνεχώς</string>
     <string name="option_book_sync_list_with_details">Συγχρονισμός/τοποθέτηση της λίστας</string>
