--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -484,7 +486,8 @@
     <string name="option_author_works_book">Solo libros</string>
     <string name="option_author_works_toc">Solo títulos de contenido</string>
     <string name="title_backup_and_export">Copia de seguridad y exportación</string>
-    <string name="btn_this_node_only">Este nodo solo</string>
+    <string name="option_apply_to_this_node_only">Este nodo solo</string>
+    <string name="option_apply_to_all_related_books">Todos los libros relacionados</string>
     <string name="option_barcode_scan">Escanear código de barras</string>
     <string name="option_barcode_scan_continuous">Escanear continuamente</string>
     <string name="option_book_sync_list_with_details">Sincronizar/posicionar la lista</string>
