--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’)
@@ -474,7 +476,8 @@
     <string name="option_author_works_book">Livres seulement</string>
     <string name="option_author_works_toc">Titres de contenu uniquement</string>
     <string name="title_backup_and_export">Sauvegarde et exportation</string>
-    <string name="btn_this_node_only">Ce nœud uniquement</string>
+    <string name="option_apply_to_this_node_only">Ce nœud uniquement</string>
+    <string name="option_apply_to_all_related_books">Tous les livres liés</string>
     <string name="option_barcode_scan">Scan code à barres</string>
     <string name="option_barcode_scan_continuous">Scanner en continu</string>
     <string name="option_book_sync_list_with_details">Synchroniser/positionner la liste</string>
