--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -483,8 +485,8 @@
     <string name="option_author_works_book">Tylko książki</string>
     <string name="option_author_works_toc">Tylko tytuły treści</string>
     <string name="title_backup_and_export">Kopia zapasowa i eksport</string>
-    <string name="btn_this_node_only">Tylko ten węzeł</string>
-    <string name="btn_this_node_only">Tylko ten węzeł</string>
+    <string name="option_apply_to_this_node_only">Tylko ten węzeł</string>
+    <string name="option_apply_to_all_related_books">Wszystkie powiązane książki</string>
     <string name="option_barcode_scan">Zeskanuj kod kreskowy</string>
     <string name="option_barcode_scan_continuous">Skanuj w sposób ciągły</string>
     <string name="option_book_sync_list_with_details">Synchronizuj/ustaw listę</string>
