--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -293,18 +293,18 @@
     <string name="option_archive_type_json">Exportación JSON (.json)</string>
     <string name="lbl_author">Autor</string>
     <string name="lbl_author_type">Tipo de autor</string>
-    <string name="lbl_author_type_artist">ilustraciones</string>
+    <string name="lbl_author_type_artist">Ilustraciones</string>
     <string name="lbl_author_type_colorist">Colorista</string>
     <string name="lbl_author_type_contributor">Contribuyente</string>
-    <string name="lbl_author_type_cover_artist">diseño de portada</string>
-    <string name="lbl_author_type_cover_colorist">colores de la portada</string>
+    <string name="lbl_author_type_cover_artist">Diseño de portada</string>
+    <string name="lbl_author_type_cover_colorist">Colores de la portada</string>
     <string name="lbl_author_type_cover_inking">Tinta de la cubierta</string>
     <string name="lbl_author_type_editor">Editor</string>
     <string name="lbl_author_type_inking">entintado</string>
     <string name="lbl_author_type_intro">Introducción etc.</string>
     <string name="lbl_author_type_narrator">Narrador</string>
     <string name="lbl_author_type_translator">Traductor</string>
-    <string name="lbl_author_type_writer">escritor</string>
+    <string name="lbl_author_type_writer">Escritor</string>
     <string name="lbl_authors">Autores</string>
     <string name="option_auto_updates">Permitir actualizaciones automáticas desde Internet.</string>
     <string name="lbl_available">Disponible</string>
