--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -283,18 +283,18 @@
     <string name="option_archive_type_json">Exportation JSON (.json)</string>
     <string name="lbl_author">Auteur</string>
     <string name="lbl_author_type">Type d\'auteur</string>
-    <string name="lbl_author_type_artist">dessins</string>
+    <string name="lbl_author_type_artist">Dessins</string>
     <string name="lbl_author_type_colorist">Coloriste</string>
     <string name="lbl_author_type_contributor">Collaborateur</string>
-    <string name="lbl_author_type_cover_artist">couverture</string>
-    <string name="lbl_author_type_cover_colorist">couleur de la couverture</string>
+    <string name="lbl_author_type_cover_artist">Couverture</string>
+    <string name="lbl_author_type_cover_colorist">Couleur de la couverture</string>
     <string name="lbl_author_type_cover_inking">Encrage de couverture</string>
     <string name="lbl_author_type_editor">Éditeur</string>
     <string name="lbl_author_type_inking">Encrage</string>
     <string name="lbl_author_type_intro">Introduction etc.</string>
     <string name="lbl_author_type_narrator">Narrateur</string>
     <string name="lbl_author_type_translator">Traducteur</string>
-    <string name="lbl_author_type_writer">écrivain</string>
+    <string name="lbl_author_type_writer">Écrivain</string>
     <string name="lbl_authors">Auteurs</string>
     <string name="option_auto_updates">Autoriser les mises à jour automatiques depuis Internet.</string>
     <string name="lbl_available">Disponible</string>
