--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -279,18 +279,18 @@
     <string name="option_archive_type_json">Esportazione JSON (.json)</string>
     <string name="lbl_author">Autore</string>
     <string name="lbl_author_type">Tipo di autore</string>
-    <string name="lbl_author_type_artist">illustrazioni</string>
+    <string name="lbl_author_type_artist">Illustrazioni</string>
     <string name="lbl_author_type_colorist">Colorista</string>
     <string name="lbl_author_type_contributor">Collaboratore</string>
-    <string name="lbl_author_type_cover_artist">copertina</string>
-    <string name="lbl_author_type_cover_colorist">colori della copertina</string>
+    <string name="lbl_author_type_cover_artist">Copertina</string>
+    <string name="lbl_author_type_cover_colorist">Colori della copertina</string>
     <string name="lbl_author_type_cover_inking">Copertina del libro Inkting</string>
     <string name="lbl_author_type_editor">Editore</string>
     <string name="lbl_author_type_inking">Inchiostro</string>
     <string name="lbl_author_type_intro">Introduzione ecc.</string>
     <string name="lbl_author_type_narrator">Narratore</string>
     <string name="lbl_author_type_translator">Traduttore</string>
-    <string name="lbl_author_type_writer">scrittore</string>
+    <string name="lbl_author_type_writer">Scrittore</string>
     <string name="lbl_authors">Autori</string>
     <string name="option_auto_updates">Consenti aggiornamenti automatici da Internet.</string>
     <string name="lbl_available">Disponibile</string>
