--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -292,18 +292,18 @@
     <string name="option_archive_type_json">Eksport JSON (.json)</string>
     <string name="lbl_author">Autor</string>
     <string name="lbl_author_type">Rodzaj autora</string>
-    <string name="lbl_author_type_artist">ilustracje</string>
+    <string name="lbl_author_type_artist">Ilustracje</string>
     <string name="lbl_author_type_colorist">Kolorysta</string>
     <string name="lbl_author_type_contributor">Współpracownik</string>
-    <string name="lbl_author_type_cover_artist">ilustracja okładki książki</string>
-    <string name="lbl_author_type_cover_colorist">kolor okładki książki</string>
+    <string name="lbl_author_type_cover_artist">Ilustracja okładki książki</string>
+    <string name="lbl_author_type_cover_colorist">Kolor okładki książki</string>
     <string name="lbl_author_type_cover_inking">Okładka książki z atramentem</string>
     <string name="lbl_author_type_editor">Redaktor</string>
     <string name="lbl_author_type_inking">Tusz</string>
     <string name="lbl_author_type_intro">Wprowadzenie itp.</string>
     <string name="lbl_author_type_narrator">Narrator</string>
     <string name="lbl_author_type_translator">Tłumacz</string>
-    <string name="lbl_author_type_writer">pisarz</string>
+    <string name="lbl_author_type_writer">Pisarz</string>
     <string name="lbl_authors">Autorski</string>
     <string name="option_auto_updates">Zezwalaj na automatyczne aktualizacje z Internetu.</string>
     <string name="lbl_available">Dostępne</string>
