--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -292,11 +292,11 @@
     <string name="lbl_author_type_cover_colorist">Kapak boyama</string>
     <string name="lbl_author_type_cover_inking">Kapak mürekkebi</string>
     <string name="lbl_author_type_editor">Editör</string>
-    <string name="lbl_author_type_inking">mürekkepleme</string>
+    <string name="lbl_author_type_inking">Mürekkepleme</string>
     <string name="lbl_author_type_intro">Giriş vs.</string>
     <string name="lbl_author_type_narrator">Dış ses</string>
     <string name="lbl_author_type_translator">Çevirmen</string>
-    <string name="lbl_author_type_writer">yazar</string>
+    <string name="lbl_author_type_writer">Yazar</string>
     <string name="lbl_authors">Yazarlar</string>
     <string name="option_auto_updates">İnternetten otomatik güncellemelere izin ver.</string>
     <string name="lbl_available">Kullanılabilir</string>
