--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -17,50 +17,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!--
-  ~ @Copyright 2018-2023 HardBackNutter
-  ~ @License GNU General Public License
-  ~
-  ~ This file is part of NeverTooManyBooks.
-  ~
-  ~ NeverTooManyBooks is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ NeverTooManyBooks is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-  ~ See the GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!--
-    Reference sites:
-    https://www.abbreviations.com/
+  -->
 
-     Some linguists, especially in British English, believe that "loan" should only
-     be used as a noun, while the correct verb is only "lend."
-
-
-    ENTITY:
-    Define entities that can be used inside of other string (not possible with standard Android
-    resources e.g. the entities file define APP_NAME; use it in another string with: &APP_NAME;
-    cannot put these into an external file: https://issuetracker.google.com/issues/68434088
-
-    Each language string.xml file uses localized quotes as per
-    https://en.wikipedia.org/wiki/Quotation_mark#Summary_table
-    See top of each language resource file for the "quotes" comment.
-
-    Plurals:
-    http://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html
-        cardinal
-
-    en-rGB: https://issuetracker.google.com/issues/142590628
-    fixed in Studio 4.1
---><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes «…» - Regex to find wrong ones: ('|„|‘|’|“|”) --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d livro exibido</item>
@@ -624,7 +585,7 @@
     <string name="pt_search_reformat_color">Padronize nomes de \"cores de livros\"</string>
     <string name="pt_search_reformat_format">Padronizar nomes de \"formatos de livros\"</string>
     <string name="pt_search_uses_publisher">A pesquisa usa o editor</string>
-    <string name="pt_collect_series_info_from_toc">Recolher informações da Série do sumário</string>
+    <string name="pt_collect_series_info_from_toc">Recolher informações da série da tabela de conteúdo</string>
     <string name="lbl_read_timeout">Tempo limite de leitura (segundos)</string>
     <string name="lbl_timeouts">Tempo limite</string>
     <string name="pt_bob_cover_show">Mostrar capas</string>
@@ -791,7 +752,7 @@
     <string name="lbl_tab_details">Detalhes</string>
     <string name="lbl_tab_alternative_editions">Ed. Alt.</string>
     <string name="unknown_title">[Título desconhecido]</string>
-    <string name="lbl_table_of_content_short">Sumário</string>
+    <string name="lbl_table_of_content_short">Conteúdo</string>
     <string name="lbl_virtual_libraries">Bibliotecas virtuais nesta biblioteca</string>
     <string name="X_lbl_created">Criado</string>
     <string name="X_lbl_queued">Na fila</string>
